k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: note-app-deploy
  namespace: note-ns
  labels:
    app: note-app
spec:
  selector:
    matchLabels:
      app: note-app
  replicas: 1
  template:
    metadata:
      labels:
        app: note-app
    spec:
      containers:
        - name: go-app
          image: mveyone/note-app:13
          ports:
            - containerPort: 5000
        - name: mongo-app
          image: mongo:latest
          ports:
            - containerPort: 27017
