k8s/ingress.yaml
# ## https://gitlab.com/codeching/kubernetes-multicontainer-application-react-nodejs-postgres-nginx/-/blob/master/k8s/ingress-service.yml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: note-ingress
  namespace: note-ns

  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: note-app.info
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: note-app
                port:
                  number: 5000
